syntax = "proto3";

package chainmetric.identity;
option go_package = "github.com/timoth-y/chainmetric-network/orgservices/identity/api/proto/user";

import "orgservices/identity/api/proto/user/user.proto";
import "orgservices/identity/api/proto/common/common.proto";
import "google/protobuf/empty.proto";

service UserService {
  rpc register(RegistrationRequest) returns (RegistrationResponse);
  rpc getState(google.protobuf.Empty) returns (User);
  rpc pingAccountStatus(google.protobuf.Empty) returns (UserStatusResponse);
  rpc changePassword(ChangePasswordRequest) returns (StatusResponse);
}
