syntax = "proto3";

package chainmetric.identity;
option go_package = "github.com/timoth-y/chainmetric-network/orgservices/identity/api/rpc";

import "orgservices/identity/api/presenter/access.proto";

service AccessService {
  rpc requestFabricCredentials(FabricCredentialsRequest) returns (FabricCredentialsResponse);
  rpc authWithSigningIdentity(CertificateAuthRequest) returns (CertificateAuthResponse);
}
